--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "usehooks-ts": "^3.0.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
