--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "flubber": "^0.4.2",
-    "framer-motion": "^11.0.12",
+    "framer-motion": "11.0.10",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
@@ -19,14 +20,19 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3"
-  }
+    "typescript": "^5",
+    "@types/bun": "latest"
+  },
 }
