--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@sentry/nextjs": "^7.105.0",
+    "clsx": "^2.1.0",
     "flubber": "^0.4.2",
     "framer-motion": "11.0.10",
     "next": "14.1.3",
