--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
+    "sass": "^1.75.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
